--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.5</version>
+        <version>3.1.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.edu</groupId>
@@ -16,7 +16,7 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <guava.version>31.0.1-jre</guava.version>
+        <guava.version>32.0.0-android</guava.version>
         <gson.version>2.8.9</gson.version>
         <commons-io.version>2.11.0</commons-io.version>
     </properties>
